--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 </head>
 
 <body>
-
-    <section id="title">
+    <section class="colored-section" id="title">
         <div class="container-fluid">
             <!-- Nav Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark">
@@ -48,12 +47,7 @@
                     </ul>
                 </div>
             </nav>
-
-
-
             <!-- Title -->
-
-
             <div class="row row-title">
                 <div class="col-lg-6">
                     <h1 class="big-title"><strong> Meet new and interesting dogs nearby</strong>.</h1>
@@ -69,11 +63,9 @@
 
     </section>
     </div>
-
     <!-- Features -->
-
-    <section id="features">
-        <div class="features">
+    <section class="white-section" id="features">
+        <div class="white-section features">
             <div class="row features-div">
                 <div class="col-lg-4">
                     <i class="fa-solid fa-circle-check features-icon fa-4x"></i>
@@ -93,15 +85,13 @@
             </div>
         </div>
     </section>
-
-
     <!-- Testimonials -->
-
-    <section id="testimonials">
+    <section class="colored-section" id="testimonials">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <h2 class="testimonial-text"><strong> I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog.
+                    <h2 class="testimonial-text"><strong> I no longer have to sniff other dogs for love. I've found the
+                            hottest Corgi on TinDog.
                             <br> Woof.</strong></h2>
                     <img class="testimonial-img" src="images/dog-img.jpg" class="d-block w-100" alt="dog-profile">
                     <em>Pebbles, New York</em>
@@ -112,7 +102,6 @@
                     <img class="testimonial-img" src="images/lady-img.jpg" class="d-block w-100" alt="lady-profile">
                     <em>Beverly, Illinois</em>
                 </div>
-
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -123,44 +112,22 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-
-
-
-
-
-
     </section>
-
-
     <!-- Press -->
-
-    <section id="press">
+    <section class="colored-section" id="press">
         <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
         <img class="press-img" src="images/tnw.png" alt="tnw-logo">
         <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
         <img class="press-img" src="images/mashable.png" alt="mashable-logo">
-
     </section>
-
-
     <!-- Pricing -->
-
-    <section id="pricing">
-
-
-
+    <section class="white-section" id="pricing">
         <h2 class="heading-text"><strong> A Plan for Every Dog's Needs</strong></h2>
         <p>Simple and affordable price plans for you and your dog.</p>
-
-
         <div class="row row-pricing">
-
             <div class="col-lg-4 col-md-6 col-pricing">
                 <div class="card-deck">
-
                     <div class="card">
-
                         <div class="card-header">
                             <h3><strong>Chihuahua</strong> </h3>
                         </div>
@@ -172,14 +139,11 @@
                             <button type="button" class="btn btn-outline-dark btn-lg btn-pricing">Sign Up</button>
                         </div>
                     </div>
-
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-6 col-pricing">
                 <div class="card-deck">
                     <div class="card">
-
                         <div class="card-header">
                             <h3><strong>Labrador</strong></h3>
                         </div>
@@ -190,13 +154,10 @@
                             <p>Unlimited App Usage</p>
                             <button type="button" class="btn btn-dark btn-lg btn-pricing">Sign Up</button>
                         </div>
-
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-12 col-pricing">
-
                 <div class="card-deck">
                     <div class="card">
                         <div class="card-header">
@@ -211,18 +172,12 @@
                             <button type="button" class="btn btn-dark btn-lg btn-pricing">Sign Up</button>
                         </div>
                     </div>
-
                 </div>
-
             </div>
         </div>
-
     </section>
-
-
     <!-- Call to Action -->
-
-    <section id="cta">
+    <section class="colored-section" id="cta">
         <div>
             <h3 class="cta-txt">Find the True Love of Your Dog's Life Today.</h3>
             <button class="btn btn-dark btn-lg cta-btn" type="button"><i class="fa-brands fa-apple"></i>
@@ -231,30 +186,22 @@
                 Download</button>
         </div>
     </section>
-
-
     <!-- Footer -->
-
-    <footer id="footer">
-        <div class="footer-div">
-            <a class="footer-a" href="https://www.twitter.com/vidald04"><i class="fa-brands fa-twitter footer-i fa-3x"></i></a>
-            <a class="footer-a" href="https://www.facebook.com/vidalcabrerabernal"> <i class="fa-brands fa-facebook footer-i fa-3x"></i></a>
-            <a class="footer-a" href="https://www.instagram.com/vidalito041"><i class="fa-brands fa-instagram footer-i fa-3x"></i></a>
-            <a class="footer-a" href="mailto:vidaldcabrera@gmail.com"> <i class="fa-solid fa-envelope footer-i fa-3x"></i></a>
-            <p class="footer-p">© Copyright 2023 TinDog</p>
-        </div>
-    </footer>
-
-
-
-
-
-
-
-
-
-
+    <section class="white-section">
+        <footer id="footer">
+            <div class="footer-div">
+                <a class="footer-a" href="https://www.twitter.com/vidald04"><i
+                        class="fa-brands fa-twitter footer-i fa-3x"></i></a>
+                <a class="footer-a" href="https://www.facebook.com/vidalcabrerabernal"> <i
+                        class="fa-brands fa-facebook footer-i fa-3x"></i></a>
+                <a class="footer-a" href="https://www.instagram.com/vidalito041"><i
+                        class="fa-brands fa-instagram footer-i fa-3x"></i></a>
+                <a class="footer-a" href="mailto:vidaldcabrera@gmail.com"> <i
+                        class="fa-solid fa-envelope footer-i fa-3x"></i></a>
+                <p class="footer-p">© Copyright 2023 TinDog</p>
+            </div>
+        </footer>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
